syntax = "proto3";

package msgExchanger;

// by default it pursues SPEED way
// option optimize_for = SPEED;

message MsgRequest {
    string msg = 1;
}

message MsgResponse {
    string msg = 1;
}

service msgExchanger {
    rpc Ping (MsgRequest) returns (MsgResponse);
    rpc SendMsg (stream MsgRequest) returns (stream MsgResponse);
    rpc SendMsg_grpc_web (MsgRequest) returns (stream MsgResponse);
}
